# BetterNCM

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BetterNCMII.sln  BetterNCMII.vcxproj  BetterNCMII.vcxproj.filters  BetterNCMII.x86.vcxproj  BetterNCMII.x86.vcxproj.filters  Cargo.toml  EasyCEFHooks.cpp  EasyCefInject.sln  EasyCefInject.vcxproj  EasyCefInject.vcxproj.filters  InstallDependencies.bat  Koaloader.config.json  README.md  createfiles.h  dllmain.cpp  pch.h  runNCM.bat  timercpp.h  vcpkg.json
.cargo/: config.toml
addons/: actionEnhancement-20220730.js  addons.json  cssLoader.js  cssLoader.ts  customMainPage.js  customMainPage.json  customMainPage.ts  debugger.js  debugger.ts  livesongplayer.js  livesongplayer.ts  online_addons.json  pluginmanager.js  pluginmanager.ts  tsconfig.json
better-ncm/: Cargo.toml  build.rs  libname.cfg
better-ncm/resource/PluginMarket/: manifest.json  plugin.js
better-ncm/resource/core/: api-script.js  eapi-shark.js  loader-script.js  plugin-manager-script.js
better-ncm/src/: config.rs  hook.rs  lib.rs  proxy_funcs.rs  racy_cell.rs  server.rs
betterncm/: Cargo.toml  build.rs  icon.rc
betterncm/ca/: cert.pem  key.pem  mkcert.bat
betterncm/frontend/: inject.js
betterncm/src/: api.rs  config.rs  create_cert.rs  main.rs  mitmserver.rs  webserver.rs  write_assets.rs
betterncm/stylesheets/: all.json
easycefhooks/: Cargo.toml
easycefhooks/src/: lib.rs  types.rs
include/: cef_accessibility_handler.h  cef_command_line.h  cef_config.h  cef_context_menu_handler.h  cef_cookie.h  cef_devtools_message_observer.h  cef_dialog_handler.h  cef_download_handler.h  cef_drag_data.h  cef_drag_handler.h  cef_extension.h  cef_file_util.h  cef_find_handler.h  cef_image.h  cef_life_span_handler.h  cef_load_handler.h  cef_media_router.h  cef_menu_model_delegate.h  cef_navigation_entry.h  cef_pack_resources.h  cef_print_handler.h  cef_process_message.h  cef_request_callback.h  cef_request_handler.h  cef_resource_bundle_handler.h  cef_resource_request_handler.h  cef_sandbox_win.h  cef_scheme.h  (+7 more)
(+329 files in other folders)
