[package]
authors = ["Steve Xiao (stevexmh@qq.com)"]
edition = "2021"
license = "MIT"
name = "better-ncm"
version = "0.1.0"

[lib]
name = "msimg32"
crate-type = ["cdylib"]

[features]
default = ["example"]
example = ["winapi/shellscalingapi"]

[dependencies]
win32-error = "0.9.0"
easycefhooks = { path = "../easycefhooks" }
winapi = {version = "0.3.9", features = ["minwindef", "winnt", "winuser", "libloaderapi", "sysinfoapi", "consoleapi"]}

[build-dependencies]
pelite = "0.9.0"
winapi = {version = "0.3.9", features = ["sysinfoapi"]}
