[package]
name = "betterncm"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
hudsucker = { version = "*", features = ["full"] }
tracing-subscriber="*"
minwin = { git ="https://github.com/Jascha-N/minwin-rs" }
msgbox = "0.7.0"
rfd = "0.10.0"
is_elevated = "0.1.2"
edit= "*"
rcgen = "0.9.2"
runas = "0.2.1"
warp = "0.3"
open = "3.0.2"
anyhow = "*"